# Self-Learning

./: .gitignore  README.md
BQML-Projects/: .gitignore  README.md  render_sql.py  render_sql.sh
BQML-Projects/IrisClassification/: ConfusionMatrix.sql  CreateDecisionTree.sql  CreateIrisDataset.sql  CreatePivotTable.sql  EvaluateDecisionTree.sql  SaveResults.sql
BQML-Projects/NCAA_Bracketology/EDA/: NCAA_EDA.ipynb
BQML-Projects/NCAA_Bracketology/ML/: NCAA_Classification.ipynb
BQML-Projects/Penguin/: GlobalFeatureExplain.sql  GlobalModelExplain.sql  PenguinInference.sql  PenguinModelCreation.sql  TrainPenguinModel.sql
BQML-Projects/Subway/: SubwayGIS.ipynb
BQML-Projects/Taxi/: NYC_Taxi.ipynb
BasicSpringbootProject/: .gitignore  README.md  pom.xml
CPPMinigames/CplusplusPiano/: .clangd  .gitignore  CplusplusPiano.pro  README.md  convert_aiff_to_wav.sh  run.sh
CPPMinigames/CplusplusPiano/src/: mainwindow.cpp  mainwindow.h
CPPMinigames/ElementalBreakout/: .gitignore  CMakeLists.txt  README.md  run.sh
CPPMinigames/ElementalBreakout/src/: AudioManager.cpp  AudioManager.h  ElementalGame.cpp  ElementalGame.h  GameConstants.h  InstructionsScreen.cpp  InstructionsScreen.h  main.cpp
CSharp/HelloWorld/: .gitignore  Models.cs  Program.cs  ProgramText.cs  SegmentDisplayLetters.cs  TransseeApiService.cs  response.txt
CSharp/HelloWorld/chrome-extension/: README.md  background.js  config.js.example  content.css  content.js  manifest.json  popup.html  transit.js
RProjects/: model.weights.h5  normalize_dataset.py  sarima.ipynb  timeseries.ipynb
(+6 files in other folders)
